unpackaged/main/default/objects/StudentsAttendance__c/StudentsAttendance__c.object-meta.xml
<CustomObject>
    <label>Students Attendance</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Students Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentsAttendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>