unpackaged/main/default/objects/StudentsAttendance__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>