unpackaged/main/default/objects/StudentsAttendance__c/fields/Pick_up__c.field-meta.xml
<CustomField>
    <fullName>Pick_up__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick-up</label>
    <type>DateTime</type>
</CustomField>