unpackaged/main/default/objects/StudentsAttendance__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Student ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>