unpackaged/main/default/objects/StudentsAttendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>School_ID__c</columns>
    <columns>Route_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Pick_up__c</columns>
    <columns>School_Name__c</columns>
    <columns>Student_ID__c</columns>
    <columns>Student_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Direction__c</columns>
    <columns>Drop_off__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>